# gpsinfo_create

./: CMakeLists.txt  README.md  gpsinfo_create.pro  local_config_EXAMPLE.cmake
doc/: README_DEPLOYMENT.txt
installer/innosetup/: gpsinfo_create.iss.in
src/: TileMatrixSetInfo.h  gpsinfoMainDialog.cpp  gpsinfoMainDialog.h  gpsinfoMainDialog.ui  main.cpp
ui/: gpsinfoMainDialog.ui
